fixed some paths in chat directory

--- a/chatPage.html
+++ b/chatPage.html
@@ -14,7 +14,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
           <div class="message">
@@ -45,7 +45,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
         </div>
@@ -53,7 +53,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
           <div class="message">
@@ -83,7 +83,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
           <div class="message">
@@ -124,7 +124,7 @@
           <div class="message__avatar">
             <object
               type="image/svg+xml"
-              data="/styles/assets/img/pentagon.svg"
+              data="./styles/assets/img/pentagon.svg"
             ></object>
           </div>
         </div>
